@@ -1,5 +1,5 @@
 --TEST--
-Inherited static properties can be separated from their reference set. 
+Inherited static properties cannot be separated from their reference set. 
 --FILE--
 <?php
 class C { public static $p = 'original'; }
@@ -13,7 +13,7 @@ echo "\nChanging one changes all the others:\n";
 D::$p = 'changed.all';
 var_dump(C::$p, D::$p, E::$p);
 
-echo "\nBut because this is implemented using PHP references, the reference set can easily be split:\n";
+echo "\nReferences cannot be used to split the properties:\n";
 $ref = 'changed.one';
 D::$p =& $ref;
 var_dump(C::$p, D::$p, E::$p);
@@ -30,8 +30,8 @@ string(11) "changed.all"
 string(11) "changed.all"
 string(11) "changed.all"
 
-But because this is implemented using PHP references, the reference set can easily be split:
-string(11) "changed.all"
+References cannot be used to split the properties:
 string(11) "changed.one"
-string(11) "changed.all"
+string(11) "changed.one"
+string(11) "changed.one"
 ==Done==
